--- a/tp/src/api/views/emails/form.ejs
+++ b/tp/src/api/views/emails/form.ejs
@@ -90,7 +90,7 @@ let content = `
           <table class="table table-sm">
             <tr><th>Domain:</th><td>${prospect.domain}</td></tr>
             <tr><th>Company:</th><td>${prospect.company_name || '-'}</td></tr>
-            <tr><th>City:</th><td>${prospect.city || '-'}</td></tr>
+            <tr><th>Location:</th><td>${prospect.city || '-'}</td></tr>
             <tr><th>Country:</th><td>${prospect.country || '-'}</td></tr>
           </table>
         </div>
