--- a/tp/src/api/views/emails/select-prospect.ejs
+++ b/tp/src/api/views/emails/select-prospect.ejs
@@ -28,7 +28,7 @@ let content = `
                 <tr>
                   <th>Domain</th>
                   <th>Company Name</th>
-                  <th>City</th>
+                  <th>Location</th>
                   <th>Country</th>
                   <th>Emails Extracted</th>
                   <th>Created</th>
