--- a/tp/src/api/views/prospects/form.ejs
+++ b/tp/src/api/views/prospects/form.ejs
@@ -44,7 +44,7 @@ let content = `
             <div class="row">
               <div class="col-md-6">
                 <div class="mb-3">
-                  <label for="city" class="form-label">City</label>
+                  <label for="city" class="form-label">Location</label>
                   <input type="text" class="form-control" id="city" name="city"
                          value="${prospect?.city || ''}">
                 </div>
