--- a/tp/src/api/views/layout.ejs
+++ b/tp/src/api/views/layout.ejs
@@ -180,6 +180,14 @@
                 </li>
               </ul>
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link <%= activePage === 'directories' ? 'active' : '' %>"
+                href="/directories"
+              >
+                <i class="bi bi-folder"></i> Directories
+              </a>
+            </li>
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
