--- a/tp/src/api/views/layout.ejs
+++ b/tp/src/api/views/layout.ejs
@@ -159,6 +159,11 @@
                   >
                 </li>
                 <li>
+                  <a class="dropdown-item" href="/settings/followup"
+                    ><i class="bi bi-envelope-arrow-up"></i> Follow-up Settings</a
+                  >
+                </li>
+                <li>
                   <a class="dropdown-item" href="/settings/keywords"
                     ><i class="bi bi-key"></i> Keywords</a
                   >
